[gd_scene load_steps=23 format=3 uid="uid://dyy6jnjoup2kd"]

[ext_resource type="Script" path="res://player/player.gd" id="1_0nfn2"]
[ext_resource type="PackedScene" uid="uid://15wfdv8vsmf1" path="res://pistol/gun.tscn" id="4_j5jjy"]
[ext_resource type="Texture2D" uid="uid://ed7f6kgehsve" path="res://player/Basic Charakter Spritesheet.png" id="5_fx4rs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_umpwx"]
radius = 31.0644

[sub_resource type="CircleShape2D" id="CircleShape2D_tmyst"]
radius = 45.0999

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sv0jr"]
bg_color = Color(0.839216, 0, 0.152941, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wxbb"]
bg_color = Color(0, 0.960784, 0.121569, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_a7idy"]
atlas = ExtResource("5_fx4rs")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnild"]
atlas = ExtResource("5_fx4rs")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqnj0"]
atlas = ExtResource("5_fx4rs")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kxv2"]
atlas = ExtResource("5_fx4rs")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wsed"]
atlas = ExtResource("5_fx4rs")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_metqu"]
atlas = ExtResource("5_fx4rs")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn8xl"]
atlas = ExtResource("5_fx4rs")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtujb"]
atlas = ExtResource("5_fx4rs")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dqua"]
atlas = ExtResource("5_fx4rs")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciafr"]
atlas = ExtResource("5_fx4rs")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouifo"]
atlas = ExtResource("5_fx4rs")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv6tf"]
atlas = ExtResource("5_fx4rs")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv4p0"]
atlas = ExtResource("5_fx4rs")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_scb66"]
atlas = ExtResource("5_fx4rs")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ci8bf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7idy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnild")
}],
"loop": true,
"name": &"idle",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqnj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kxv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wsed")
}],
"loop": true,
"name": &"walk_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_metqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn8xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtujb")
}],
"loop": true,
"name": &"walk_left",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dqua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ciafr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouifo")
}],
"loop": true,
"name": &"walk_right",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv6tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv4p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scb66")
}],
"loop": true,
"name": &"walk_up",
"speed": 7.0
}]

[node name="Player" type="CharacterBody2D"]
platform_floor_layers = 0
script = ExtResource("1_0nfn2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_umpwx")

[node name="PlayerCamera" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("4_j5jjy")]
position = Vector2(-13, -56)

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_tmyst")
debug_color = Color(0.905882, 0, 0.309804, 0.419608)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -64.0
offset_top = -135.0
offset_right = 18.0
offset_bottom = -108.0
scale = Vector2(1.48, 1.08)
theme_override_styles/background = SubResource("StyleBoxFlat_sv0jr")
theme_override_styles/fill = SubResource("StyleBoxFlat_8wxbb")
value = 100.0
show_percentage = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -36)
scale = Vector2(6.375, 6.75)
sprite_frames = SubResource("SpriteFrames_ci8bf")
animation = &"idle"
frame_progress = 0.467501

[connection signal="picked_up_power_up" from="." to="." method="_on_picked_up_power_up"]
[connection signal="picked_up_power_up" from="." to="Gun" method="_on_player_picked_up_power_up"]
